<resources>
    <string name="app_name">FirebaseMicroblog</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="conf_password">Conf password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add post</string>
    <string name="new_post">New Post</string>
    <string name="post_list">Post list</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="required">Required</string>
    <string name="min_required_length">Min required length is 6</string>
    <string name="different_passwords">Different passwords</string>
    <string name="all_posts">All posts</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Please check your e-mail and password and try again.</string>
</resources>
