<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_button"
            android:title="@string/home" />
        <item
            android:id="@+id/add_button"
            android:title="@string/add_post" />
        <item
            android:id="@+id/profile_button"
            android:title="@string/profile" />
        <item
            android:id="@+id/all_posts_button"
            android:title="@string/all_posts" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/logout_button"
            android:title="@string/logout" />
    </group>
</menu>